WindGroup Dev/src/objects/Quote__c.object
<CustomObject>
    <fields>
        <fullName>Above_Minimum_Percentage__c</fullName>
        <formula>( Grand_Total__c -  PO_No__r.Min_Quote_Amount__c ) / PO_No__r.Min_Quote_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(Grand Total - Min Quote Amount) / Min Quote Amount</inlineHelpText>
        <label>Above Minimum (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grand_Total__c</fullName>
        <label>Grand Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_No__c</fullName>
        <label>PO No.</label>
        <referenceTo>Purchase_Order__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quote_Date__c</fullName>
        <label>Quote Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vendor_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Vendor_Name__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Vendor</value>
            </filterItems>
            <filterItems>
                <field>Account.Whitelisted__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Quote</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-QR-{000000}</displayFormat>
        <label>Quote Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quotes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Update_only_for_particular_PO_status</fullName>
        <active>true</active>
        <description>Quote is readonly if PO Status is Inapproval or Issued</description>
        <errorConditionFormula>AND(OR(ISPICKVAL(PO_No__r.Status__c,&apos;Issued&apos;),ISPICKVAL(PO_No__r.Status__c,&apos;In-Approval&apos;)),NOT(ISNEW()))</errorConditionFormula>
        <errorMessage>Quote can only be updated if PO Status is &apos;Draft&apos; or &apos;Rejected&apos;</errorMessage>
    </validationRules>
</CustomObject>